UtahLiveDataTest/src/objects/Application__c.object
<CustomObject>
    <description>[Business] Stores the information related to the Applications</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <description>This field is used in Grantor - General Application Cover Page form</description>
        <label>Acknowledgement</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acknowledgment2__c</fullName>
        <description>This field is used in Grantor - General Application Education Form.</description>
        <label>Acknowledgment2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acknowledgment3__c</fullName>
        <description>This field is used in Grantor Application Health form.</description>
        <label>Acknowledgment3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acknowledgment4__c</fullName>
        <description>This field is used in Grantor Application Simple Form</description>
        <label>Acknowledgment4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgencyContact__c</fullName>
        <description>Agency Contact copied over from the Announcement</description>
        <label>Agency Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <description>Name of the Awarding Federal Agency which is a Granting this grant</description>
        <formula>Announcement__r.AwardingFedAgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AggregatedPreScreenCommentsUSBE__c</fullName>
        <label>AggregatedPreScreenCommentsUSBE</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AmountThisAction__c</fullName>
        <label>Amount This Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnouncementChanged__c</fullName>
        <description>This Field is used to Flag if the Funding Opportunity has changed</description>
        <formula>TEXT(Announcement__r.FOALead__r.ModificationNumber__c)</formula>
        <label>Announcement Changed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementNumber__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300)) + Announcement__r.Id, Announcement__r.AnnouncementNumber__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementOrgNameAndAddress__c</fullName>
        <description>This field is used in Application Cover Page form.</description>
        <formula>Announcement__r.OrganizationName__c &amp; BR() 
&amp; Announcement__r.Organization__r.FullBillingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Announcement Org Name And Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementOwnerId__c</fullName>
        <formula>Announcement__r.OwnerId</formula>
        <inlineHelpText>Used in the trigger to avoid a SOQL</inlineHelpText>
        <label>Announcement&apos;s Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementOwner__c</fullName>
        <formula>Announcement__r.Owner:User.FirstName &amp; &apos;&apos; &amp; Announcement__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnouncementOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementPOCPhone__c</fullName>
        <formula>Announcement__r.PointofContactPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnouncementPOCPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementPOC__c</fullName>
        <description>This field is used in Application Cover Page form.</description>
        <formula>Announcement__r.PointOfContactName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Announcement POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementTitle__c</fullName>
        <formula>Announcement__r.AnnouncementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnouncementTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementType__c</fullName>
        <description>Type of Announcement that this application belongs to</description>
        <formula>TEXT( Announcement__r.AnnouncementType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Announcement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppGroupCode__c</fullName>
        <label>Application Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantNameAcknowledge__c</fullName>
        <label>Applicant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantState__c</fullName>
        <description>I have created this field so that it can be used to group application by state in reports</description>
        <formula>ExternalOrganization__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCreatedOutside__c</fullName>
        <description>This is a field that Captures the field from the opportunity which shows that the Application is created outside of the current System</description>
        <formula>Text(Announcement__r.ApplicationCreatedOutside__c)== &apos;Yes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Created Outside the System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadlineWithDateTime__c</fullName>
        <description>This field is created because the current field is a Formula fild , Need to delete one of them later on</description>
        <label>Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadline__c</fullName>
        <description>The Date by which the Application must be submitted</description>
        <formula>Announcement__r.ApplicationDeadlineWithDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationDeadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationGroupCode__c</fullName>
        <formula>Announcement__r.Organization__r.GroupCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Group Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationHtmlLink__c</fullName>
        <formula>$Setup.PortalURL__c.url__c+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationHtmlLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationRank__c</fullName>
        <description>This field is used for Ranking the Application</description>
        <label>Application Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationSubmissionTemplate__c</fullName>
        <description>Used in trigger to avoid soql</description>
        <formula>Announcement__r.ApplicationSubmissionEmailTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in trigger to avoid soql</inlineHelpText>
        <label>Application Submission Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <description>The type of application.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Revision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationUpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ApplicationUpdateCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApproverName__c</fullName>
        <formula>Approver__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The internal approver for the application</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicationsap2u</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The internal user that the application is assigned to.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssuranceTermCondition__c</fullName>
        <label>Assurance Term and Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I read the terms and agree</fullName>
                </value>
                <value>
                    <fullName>I read the terms and do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeEmail1__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeEmail__c</fullName>
        <label>Authorized Representative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeFax__c</fullName>
        <label>Fax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeLastName__c</fullName>
        <label>Authorized Representative Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeName__c</fullName>
        <label>Authorized Representative Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativePhone1__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativePhone__c</fullName>
        <label>Authorized Representative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AuthorizedRepresentativeTitle__c</fullName>
        <label>Authorized Representative Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageScore__c</fullName>
        <description>Field required to Score the Applications</description>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicationshrnw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicationshrou</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardCeiling__c</fullName>
        <label>AwardCeiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardDecisionStatusText__c</fullName>
        <formula>TEXT(AwardDecisionStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardDecisionStatusText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardDecisionStatus__c</fullName>
        <description>Field to handle Award Decision ( Award created or negotiation in progress )</description>
        <inlineHelpText>Field to handle Award Decision ( Award created or negotiation in progress )</inlineHelpText>
        <label>Award Decision Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Award Created</fullName>
                </value>
                <value>
                    <fullName>Revision Completed</fullName>
                </value>
                <value>
                    <fullName>Revision Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardFloor__c</fullName>
        <label>AwardFloor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetAllocation__c</fullName>
        <description>This field is created for USBE programs where budget is uploaded from an  excel sheet.</description>
        <label>Budget Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetFormula__c</fullName>
        <formula>Announcement__r.EstimatedAverageSizeOfAward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BudgetFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetNarrative__c</fullName>
        <description>Running explanation and/or justification of budget</description>
        <inlineHelpText>Running explanation and/or justification of budget</inlineHelpText>
        <label>BudgetNarrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Field to capture the Total Budget</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgets_Requested__c</fullName>
        <description>This field is used in the (Project Abstract Form)</description>
        <label>Budgets Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <label>CFDANumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSStalkingPercent__c</fullName>
        <label>CSStalkingPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CertificateTermsAgreement__c</fullName>
        <label>Certificate Terms and Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I read the terms and agree</fullName>
                </value>
                <value>
                    <fullName>I read the terms and do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeOwnerAndCloseTask__c</fullName>
        <label>ChangeOwnerAndCloseTask</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeRequestDueDate__c</fullName>
        <description>This field is used to capture the Change request due date</description>
        <label>Change Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChangeRequestStatus__c</fullName>
        <label>Change Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revision Request Assigned</fullName>
                </value>
                <value>
                    <fullName>Revision Request Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeRequestedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeRequestedOn__c</fullName>
        <label>Change Requested On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckOwnerApplicationUSBE__c</fullName>
        <formula>OR( 
 OwnerId &lt;&gt; $User.Id,
AND(OwnerId = $User.Id, 
 NOT(OR( 
  ISPICKVAL( Status__c, &apos;Created&apos;), 
  ISPICKVAL( Status__c , &apos;Revision Initiated&apos;), 
  ISPICKVAL( Status__c , &apos;Revision In Progress&apos;), 
  AND(ISPICKVAL( Status__c , &apos;Submitted to Grantor&apos;), ISPICKVAL(ChangeRequestStatus__c, &apos;Revision Request Assigned&apos;)), 
  ISPICKVAL( Status__c , &apos;Internally Reviewed&apos;)
  )
 )  
)   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckOwnerApplicationUSBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckOwnerApplication__c</fullName>
        <description>Old Formula: OwnerId != $User.Id</description>
        <formula>OwnerId  &lt;&gt; $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckOwnerApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClonedFrom__c</fullName>
        <description>Name of Application from where the record is cloned from?</description>
        <label>Cloned From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this record cloned?</description>
        <label>Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructionPackageIncluded__c</fullName>
        <description>This field is used to determine the budget categories</description>
        <formula>IF(ISPICKVAL(Announcement__r.Budget_Category_Package__c , &apos;Construction&apos;) , &apos;Construction&apos;, &apos;Non construction&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Package Included</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostPerVictim__c</fullName>
        <description>Cost Per Victim = Total Requested Grant Cost  /  Total Number Of Victims (taken from question #5 in cover-sheet )</description>
        <formula>TotalFederalMatch__c / TotalCrimeType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost Per Victim = Total Requested Grant Cost  /  Total Number Of Victims (taken from question #5 in cover-sheet )</inlineHelpText>
        <label>CostPerVictim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountSubmittedApps__c</fullName>
        <description>Count of Submitted applications for an announcement by an Organization</description>
        <label>Count Submitted Applications</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoverPageDetail__c</fullName>
        <label>Application Cover Page</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CreateAwardButtonDecision__c</fullName>
        <description>Field to show if the button for creating Award should be shown</description>
        <formula>OR(ISPICKVAL(  ApplicationType__c ,&apos;New&apos;),ISPICKVAL( ApplicationType__c ,&apos;Revision&apos;))</formula>
        <label>Create Award Button Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateGrantButtonDecision__c</fullName>
        <formula>NOT(ISPICKVAL( Status__c , &apos;Accepted&apos;))||  ISPICKVAL( TypeOfApplication__c , &apos;Continuation&apos;)</formula>
        <label>Create Grant Button Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateHistory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByBudgetUpload__c</fullName>
        <formula>IF(OR(
TEXT(Announcement__r.Program__r.ProgramPathway__c)=&apos;Fed-Formula&apos;,
TEXT(Announcement__r.Program__r.ProgramPathway__c)=&apos;Lump-Sum-App&apos;,
TEXT(Announcement__r.Program__r.ProgramPathway__c)=&apos;FedFormula&apos;,
TEXT(Announcement__r.Program__r.ProgramPathway__c)=&apos;LSA&apos;,
TEXT(Announcement__r.Program__r.ProgramPathway__c)=&apos;Application 1/12th&apos;
), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByBudgetUpload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedBudgetSum__c</fullName>
        <label>CurrentApprovedBudgetSum</label>
        <summarizedField>ApplicationBudgetCategory2__c.BudgetCategoryAmount__c</summarizedField>
        <summaryForeignKey>ApplicationBudgetCategory2__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetPeriodEndDate__c</fullName>
        <inlineHelpText>Auto populated date to indicate the current budget period for which the application has been awarded</inlineHelpText>
        <label>Current Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetPeriodStartDate__c</fullName>
        <inlineHelpText>Auto populated date to indicate the current budget period for which the application has been awarded</inlineHelpText>
        <label>Current Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentDate__c</fullName>
        <formula>TEXT(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStepId__c</fullName>
        <label>Current Review Step Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStep__c</fullName>
        <label>Current Review Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Screen Review</fullName>
                </value>
                <value>
                    <fullName>External Review</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentUserIsInternalApprover__c</fullName>
        <formula>IF($User.Id = Approver__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUserIsInternalApprover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsOwner__c</fullName>
        <formula>IF($User.Id = OwnerId, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUserIsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOHTermsOfAgreement__c</fullName>
        <label>DOH Terms of Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I read the terms and do not agree</fullName>
                </value>
                <value>
                    <fullName>I read the terms and agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <formula>ExternalOrganization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVPercent__c</fullName>
        <label>DVPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DaVPercent__c</fullName>
        <label>DaVPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DataEvaluator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataEvaluator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Acknowledgement__c</fullName>
        <label>Date Of Acknowledgement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisableMatch__c</fullName>
        <formula>NOT(Announcement__r.MatchRequired__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableSubmitApplication__c</fullName>
        <formula>IF( TEXT(Status__c) == &apos;Negotiation In Progress&apos;,IF(  $User.ProfileName__c ==&apos;Project Admin&apos; &amp;&amp; (TEXT( ChangeRequestStatus__c)= &apos;Pre-Award Request Assigned&apos;),false,true),true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisableSubmitApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayCRSubmit__c</fullName>
        <formula>NOT(AND(TEXT(Status__c) = &apos;Negotiation In Progress&apos;, $User.IsExternalUser__c,  TEXT(ChangeRequestStatus__c) = &apos;Change Request Assigned&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayCRSubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayComplianceCheck__c</fullName>
        <formula>TEXT( Status__c )==&apos;Complete&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayComplianceCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayDeleteButton__c</fullName>
        <description>Field to show if the Delete button should be shown on the UI or not</description>
        <formula>OR(ISPICKVAL(Status__c, &apos;Submitted to Grantor&apos;),ISPICKVAL(Status__c, &apos;Withdrawn&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayDeleteButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayEditButtonBeforeNeg__c</fullName>
        <formula>IF($User.IsApplicant__c &amp;&amp; (TEXT(Status__c) = &apos;In Progress&apos; || TEXT(Status__c) = &apos;Complete&apos;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayEditButtonBeforeNeg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <description>Decision field to show if the Display button should show up on the page</description>
        <formula>OR(AND(NOT(TEXT(Status__c) =&apos;Created&apos; || TEXT(Status__c) =&apos;Internally Reviewed&apos; || AND(TEXT(Status__c) =&apos;Revision Initiated&apos;,TEXT(ChangeRequestStatus__c)=&apos;Revision Request Assigned&apos;)), RecordType.DeveloperName =&apos;Grantor&apos;),
 AND(RecordType.DeveloperName =&apos;Grantee&apos;,AND((Text(Status__c) != &apos;Created&apos;),(Text(Status__c) != &apos;Reviewed&apos;)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayFullGrid__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;In Progress&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Full Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayGrid__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayInitiateAward__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DisplayInitiateAward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplaySubmittedMessage__c</fullName>
        <formula>AND(TEXT(Status__c) = &apos;Submitted&apos;, $Profile.Name = &apos;Project Admin&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplaySubmittedMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplaySuccessMessage__c</fullName>
        <formula>AND((TEXT(Status__c) = &apos;In Progress&apos;  || TEXT(Status__c) = &apos;Complete&apos;), $Profile.Name = &apos;Project Admin&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplaySuccessMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentDescription1__c</fullName>
        <formula>PreApplication__r.DocumentDescription1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Description 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentDescription2__c</fullName>
        <formula>PreApplication__r.DocumentDescription2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Description 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentDescription3__c</fullName>
        <formula>PreApplication__r.DocumentDescription3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Description 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName1__c</fullName>
        <formula>PreApplication__r.DocumentName1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName2__c</fullName>
        <formula>PreApplication__r.DocumentName2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName3__c</fullName>
        <formula>PreApplication__r.DocumentName3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueInDays__c</fullName>
        <formula>IF( DATEVALUE(ApplicationDeadlineWithDateTime__c) &gt; TODAY() ,DATEVALUE(ApplicationDeadlineWithDateTime__c) - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>(ExternalOrganization__r.EINText__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EducationQuestion1__c</fullName>
        <label>Education Question 1</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EducationQuestion2__c</fullName>
        <label>Education Question 2</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EducationQuestion3__c</fullName>
        <label>Education Question 3</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
</CustomObject>